# Research_Track_2-Unige

./: ReadMe.md
1_a/final/assignment1_pkg/a1_pkg/: CMakeLists.txt  package.xml
1_a/final/assignment1_pkg/a1_pkg/launch/: architecture.launch.py  component_server.launch.py  spawn_robot.launch.py  world.launch.py
1_a/final/assignment1_pkg/a1_pkg/src/: pose_client_component.cpp  pose_server_component.cpp
1_a/final/assignment1_pkg/a1_pkg/urdf/: mogi_bot.urdf
a1_pkg/: CMakeLists.txt  ReadMe.md  package.xml
a1_pkg/action/: MovePose.action
a1_pkg/launch/: architecture.launch.py  component_server.launch.py  spawn_robot.launch.py  spawn_robot_ex.launch.py
a1_pkg/scripts/: ui_node.py
a1_pkg/src/: pose_client_component.cpp  pose_server_component.cpp
a1_pkg/urdf/: mogi_bot.gazebo
bme_gazebo_sensors/: CMakeLists.txt
bme_gazebo_sensors/action_script/: a_server.py
components/comp_pkg/components_package/: CMakeLists.txt  package.xml
components/comp_pkg/components_package/launch/: component_server.launch.py  spawn_robot.launch.py  spawn_robot_ex.launch.py  world.launch.py
components/comp_pkg/components_package/src/: a_client_component.cpp  a_server_component.cpp
components/comp_pkg/components_package/urdf/: mogi_bot.urdf
install/: local_setup.sh  setup.sh
install/bme_gazebo_sensors/include/bme_gazebo_sensors/bme_gazebo_sensors/action/: move_action.hpp
install/bme_gazebo_sensors/include/bme_gazebo_sensors/bme_gazebo_sensors/action/detail/: move_action__builder.hpp  move_action__functions.c  move_action__rosidl_typesupport_fastrtps_c.h  move_action__rosidl_typesupport_introspection_c.h  move_action__type_support.cpp  move_action__type_support.h
install/bme_gazebo_sensors/include/bme_gazebo_sensors/bme_gazebo_sensors/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/bme_gazebo_sensors/lib/bme_gazebo_sensors/: a_client.py
install/bme_gazebo_sensors/local/lib/python3.10/dist-packages/bme_gazebo_sensors-1.0.0-py3.10.egg-info/: SOURCES.txt
install/bme_gazebo_sensors/local/lib/python3.10/dist-packages/bme_gazebo_sensors/action/: _move_action.py  _move_action_s.c
install/bme_gazebo_sensors/share/ament_index/resource_index/package_run_dependencies/: bme_gazebo_sensors
install/bme_gazebo_sensors/share/ament_index/resource_index/rosidl_interfaces/: bme_gazebo_sensors
install/bme_gazebo_sensors/share/bme_gazebo_sensors/: local_setup.dsv  package.dsv  package.ps1  package.sh
install/bme_gazebo_sensors/share/bme_gazebo_sensors/action/: MoveAction.action
install/bme_gazebo_sensors/share/bme_gazebo_sensors/cmake/: ament_cmake_export_libraries-extras.cmake  bme_gazebo_sensorsConfig.cmake  bme_gazebo_sensors__rosidl_typesupport_introspection_cExport.cmake  bme_gazebo_sensors__rosidl_typesupport_introspection_cppExport-noconfig.cmake  bme_gazebo_sensors__rosidl_typesupport_introspection_cppExport.cmake  export_bme_gazebo_sensors__rosidl_generator_cExport.cmake  export_bme_gazebo_sensors__rosidl_generator_pyExport-noconfig.cmake  export_bme_gazebo_sensors__rosidl_generator_pyExport.cmake  export_bme_gazebo_sensors__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
log/: latest_build
